# crewAi

news_analyzer/: README.md  pyproject.toml
news_analyzer/src/news_analyzer/: crew.py  main.py
